--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 
         .skills-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
             gap: 35px;
         }
 
@@ -670,12 +670,12 @@
         <div class="hero-content">
             <div class="badge">✦ Available For Work</div>
             <h1>
-                Creative Developer<br>
-                <span class="gradient-text">& Designer</span>
+                Creative Developer,<br>
+                Designer <span class="gradient-text">& YouTuber</span>
             </h1>
             <p>
                 Crafting exceptional digital experiences through code and design. 
-                Specializing in full-stack development, game design, and immersive user interfaces.
+                Specializing in full-stack development, game design, and creating educational content about Roblox scripting.
             </p>
             <div class="cta-buttons">
                 <a href="#contact" class="btn btn-primary">Let's Talk</a>
@@ -708,6 +708,11 @@
                     <p>Building immersive Roblox experiences with complex mechanics and engaging gameplay systems.</p>
                 </div>
                 <div class="skill-card reveal">
+                    <div class="skill-icon">🎬</div>
+                    <h3>Content Creation</h3>
+                    <p>Testing Roblox scripts and creating educational content for the developer community on YouTube.</p>
+                </div>
+                <div class="skill-card reveal">
                     <div class="skill-icon">🎨</div>
                     <h3>UI/UX Design</h3>
                     <p>Creating beautiful, intuitive interfaces that users love with attention to every detail.</p>
@@ -737,6 +742,10 @@
                 Open to exciting projects, collaborations, and opportunities. Let's build something amazing.
             </p>
             <div class="contact-links">
+                <a href="https://www.youtube.com/@VroomySeries" target="_blank" class="contact-card">
+                    <div class="platform">YouTube</div>
+                    <div class="handle">@VroomySeries</div>
+                </a>
                 <a href="https://instagram.com/zv.gegidz3" target="_blank" class="contact-card">
                     <div class="platform">Instagram</div>
                     <div class="handle">@zv.gegidz3</div>
