--- a/index.html
+++ b/index.html
@@ -746,12 +746,16 @@
                     <div class="platform">YouTube</div>
                     <div class="handle">@VroomySeries</div>
                 </a>
+                <a href="https://discord.gg/fjWYewhCcK" target="_blank" class="contact-card">
+                    <div class="platform">Discord Server</div>
+                    <div class="handle">VroomySeries</div>
+                </a>
                 <a href="https://instagram.com/zv.gegidz3" target="_blank" class="contact-card">
                     <div class="platform">Instagram</div>
                     <div class="handle">@zv.gegidz3</div>
                 </a>
                 <a href="#" class="contact-card" onclick="copyDiscord(event)">
-                    <div class="platform">Discord</div>
+                    <div class="platform">Discord DM</div>
                     <div class="handle">zvio0172</div>
                 </a>
             </div>
