--- a/index.html
+++ b/index.html
@@ -742,15 +742,19 @@
                 Open to exciting projects, collaborations, and opportunities. Let's build something amazing.
             </p>
             <div class="contact-links">
-                <a href="https://www.youtube.com/@VroomySeries" target="_blank" class="contact-card">
+                <a href="https://www.youtube.com/@VroomySeries" target="_blank" rel="noopener noreferrer" class="contact-card">
                     <div class="platform">YouTube</div>
                     <div class="handle">@VroomySeries</div>
                 </a>
-                <a href="https://discord.gg/fjWYewhCcK" target="_blank" class="contact-card">
+                <a href="https://www.tiktok.com/@vroomyseries" target="_blank" rel="noopener noreferrer" class="contact-card">
+                    <div class="platform">TikTok</div>
+                    <div class="handle">@vroomyseries</div>
+                </a>
+                <a href="https://discord.gg/fjWYewhCcK" target="_blank" rel="noopener noreferrer" class="contact-card">
                     <div class="platform">Discord Server</div>
                     <div class="handle">VroomySeries</div>
                 </a>
-                <a href="https://instagram.com/zv.gegidz3" target="_blank" class="contact-card">
+                <a href="https://instagram.com/zv.gegidz3" target="_blank" rel="noopener noreferrer" class="contact-card">
                     <div class="platform">Instagram</div>
                     <div class="handle">@zv.gegidz3</div>
                 </a>
